--- a/package.json
+++ b/package.json
@@ -1,7 +1,12 @@
 {
-  "name": "react-demo",
+  "name": "cesium-demo",
   "version": "0.1.0",
   "private": true,
+  "scripts": {
+    "start": "node scripts/start.js",
+    "build": "node scripts/build.js",
+    "test": "node scripts/test.js"
+  },
   "dependencies": {
     "@babel/core": "7.5.5",
     "@svgr/webpack": "4.3.2",
@@ -60,11 +65,9 @@
     "webpack-manifest-plugin": "2.0.4",
     "workbox-webpack-plugin": "4.3.1"
   },
-  "scripts": {
-    "start": "node scripts/start.js",
-    "build": "node scripts/build.js",
-    "test": "node scripts/test.js"
-  },
+  "devDependencies": {
+    "copy-webpack-plugin": "^5.0.4"
+  }, 
   "eslintConfig": {
     "extends": "react-app"
   },
@@ -132,8 +135,5 @@
     "presets": [
       "react-app"
     ]
-  },
-  "devDependencies": {
-    "copy-webpack-plugin": "^5.0.4"
   }
 }
