--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cesium-demo",
+  "name": "react-cesium",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -19,7 +19,7 @@
     "babel-preset-react-app": "^9.0.1",
     "camelcase": "^5.2.0",
     "case-sensitive-paths-webpack-plugin": "2.2.0",
-    "cesium": "^1.61.0",
+    "cesium": "^1.71.0",
     "css-loader": "2.1.1",
     "dotenv": "6.2.0",
     "dotenv-expand": "4.2.0",
